[tool.poetry]
name = "blinkalarm"
version = "0.1.0"
description = ""
authors = ["gr-b <gr-b@github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.11.0.86"
mediapipe = "^0.10.21"
simpleaudio = "^1.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
